<resources>
    <string name="app_name">Mobile|Business</string>
    <string name="default_web_client_id">669330987916-jagdjbqphnmn3h07gq633oeofaapum96.apps.googleusercontent.com</string>

    <string name="Item_perfil">Perfil</string>
    <string name="Item_usuarios">Categorias</string>
    <string name="Item_chats">Chats</string>

    <string name="tv_Titulo">Titulo</string>

    <string name="opcionEmail">Iniciar con Email</string>
    <string name="opcionGoogle">Iniciar con Google</string>

    <string name="txt_login">Login</string>
    <string name="et_Email">Correo electrónico</string>
    <string name="et_Password">Constraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="txt_no_tines_cuenta">¿No tienes una cuenta?</string>
    <string name="tv_registrarme">Registrarme</string>

    <string name="tv_recuperar_cuenta">¿Olvidé la contraseña?<b> Recuperar</b></string>

    <string name="txt_registro">Registro</string>
    <string name="et_Nombres">Nombres</string>
    <string name="et_R_Password">Repita la contraseña</string>
    <string name="btn_Registrar">Registrar</string>

    <string name="btn_ActualizarInfo">Actualizar</string>
    <string name="btn_Cerrarsesion">Cerrar sesión</string>

    <string name="btn__CambiarPass">Cambiar contraseña</string>

    <!-- txt: Nombre del dato que se traera desde firebase (Nombres, Email, Proveedor, Miembor desde) -->
    <!-- tv: Almacenan el dato que se trae directamente desde firebase -->

    <string name="txt_nombres">Nombres: </string>
    <string name="tv_nombres"> -- </string>
    <string name="txt_email">Email: </string>
    <string name="tv_email"> -- </string>
    <string name="txt_proveedor">Proveedor: </string>
    <string name="tv_proveedor"> -- </string>
    <string name="txt_t_registro">Miembro desde: </string>
    <string name="tv_t_registro"> -- </string>

    <string name="txt_titulo_edit">Editar información</string>
    <string name="btn_Actualizar">Actualizar</string>

    <string name="txt_olvide_password">Olvidé password</string>
    <string name="txt_ingrese_email">Ingrese su email para recuperar la cuenta</string>
    <string name="btn_Enviar">Enviar</string>

    <string name="txt_cambiar_pass">Cambiar contraseña</string>
    <string name="et_pass_actual">Contraseña actual</string>
    <string name="et_pass_nueva">Contraseña nueva</string>
    <string name="et_r_pass_nueva">Repita contraseña nueva</string>
    <string name="btn_CambiarPassword">Cambiar</string>

    <string name="item_uid">uid del usuario</string>
    <string name="item_nombre">nombre del usuario</string>
    <string name="item_email">email del usuario</string>

    <string name="et_buscar_usuario">Buscar usuario</string>

    <string name="txt_nombre_usuario">Nombres</string>

    <string name="et_mensaje_chat">Escriba algo...</string>
    <string name="tv_tiempo_mensaje">dd/MM/yyyy hh:mm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="Welcome">Welcome</string>
    <string name="Binevenidos">Bienvenidos</string>
    <string name="Mobile_Business">Mobile Business</string>
    <string name="et_buscar">Buscar</string>
    <string name="tvFecha">dd/MM/yyyy</string>

    <string name="btn_cerrarVisualizador">Cerrar</string>
    <string name="txt_estado_chat">Online</string>
    <string name="checkBox_Vendedor">¿Eres Vendedor?</string>

    <string name="txt_btcomida">Comida</string>
    <string name="txt_btbebidas">Bebidas</string>
    <string name="txt_btropa">Ropa</string>
    <string name="txt_btotros">Otros</string>
    <string name="txt_categorias">Categorias</string>


</resources>