<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/black"
    tools:context=".RegistroEmailActivity">

    <TextView
        android:text="@string/txt_registro"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"/>
    
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="15dp"/>

    <!--Nombres-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <EditText
            android:id="@+id/et_Nombres"
            android:hint="@string/et_Nombres"
            android:inputType="textCapWords|textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Correo-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_Email"
            android:hint="@string/et_Email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        
        <EditText
            android:id="@+id/et_Password"
            android:hint="@string/et_Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--Repita el Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_R_Password"
            android:hint="@string/et_R_Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox_Vendedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox_Vendedor"
        android:textColor="@color/white"
        android:layout_marginTop="15dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Registrar"
        android:text="@string/btn_Registrar"
        android:textAllCaps="true"
        android:layout_marginTop="15dp"
        app:cornerRadius="8dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Tinto"/>

</androidx.appcompat.widget.LinearLayoutCompat>