<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".OpcionesLoginActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/opcionEmail"
        android:text="@string/opcionEmail"
        android:layout_marginTop="35dp"
        android:textAllCaps="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Tinto"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/correo"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/opcionGoogle"
        android:text="@string/opcionGoogle"
        android:textAllCaps="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Tinto"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/google"/>


    <Button
        android:id="@+id/btSignFacebook"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/Tinto"
        android:drawableLeft="@drawable/facebook"
        android:text="@string/facebook"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingLeft="30dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>