<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CambiarPasswordActivity">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/black"
        android:textColor="@color/white">
        
        <ImageButton
            android:id="@+id/IbRegresar"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_cambiar_pass"
            android:text="@string/txt_cambiar_pass"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>
        
        <View
            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_below="@id/toolbarRL">

        <!--Password actual-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILPasswordActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">
            
            <EditText
                android:id="@+id/et_pass_actual"
                android:hint="@string/et_pass_actual"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"/>


        </com.google.android.material.textfield.TextInputLayout>

        <!--Password nueva-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILPasseoNueva"
            android:layout_below="@id/TILPasswordActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_pass_nueva"
                android:hint="@string/et_pass_nueva"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"/>




        </com.google.android.material.textfield.TextInputLayout>

        <!--Repetir password nueva-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILRepetirPasseoNueva"
            android:layout_below="@id/TILPasseoNueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_r_pass_nueva"
                android:hint="@string/et_r_pass_nueva"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_CambiarPass"
            android:text="@string/btn__CambiarPass"
            android:textAllCaps="true"
            android:layout_alignParentBottom="true"
            app:cornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Tinto"/>


    </RelativeLayout>

</RelativeLayout>