<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".EditarInformacionActivity">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageButton
            android:id="@+id/IbRegresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_titulo_edit"
            android:text="@string/txt_categorias"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

        <View
            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Botón 1 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/Tinto"
                android:gravity="center"
                android:textSize="14sp"
                app:icon="@drawable/icono_plato_2"
                app:iconPadding="8dp"
                app:iconSize="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_btcomida"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <!-- Botón 2 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

    <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="12dp"
            android:backgroundTint="@color/Tinto"
            android:textSize="14sp"
            android:gravity="center"
            app:icon="@drawable/icono_vaso"
            app:iconSize="48dp"
            app:iconPadding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btbebidas"
            android:textColor="@color/white"
            android:textSize="20sp" />
        </LinearLayout>

        <!-- Botón 3 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="12dp"
            android:backgroundTint="@color/Tinto"
            android:gravity="center"
            android:textSize="14sp"
            app:icon="@drawable/icono_camiseta"
            app:iconPadding="8dp"
            app:iconSize="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_btropa"
            android:textColor="@color/white"
            android:textSize="20sp" />
        </LinearLayout>

        <!-- Botón 4 -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="12dp"
                android:backgroundTint="@color/Tinto"
                android:gravity="center"
                android:textSize="14sp"
                app:icon="@drawable/icono_raqueta"
                app:iconPadding="8dp"
                app:iconSize="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_btotros"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>